@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -73,21 +74,28 @@
 
 	<modules>
 		<module>xchange-core</module>
+		<module>xchange-bitcoinaverage</module>
 		<module>xchange-bitcoincharts</module>
 		<module>xchange-bitcoinium</module>
 		<module>xchange-bitcurex</module>
+		<module>xchange-bitfinex</module>
 		<module>xchange-bitstamp</module>
 		<module>xchange-blockchain</module>
 		<module>xchange-btcchina</module>
 		<module>xchange-btce</module>
+		<module>xchange-bter</module>
 		<module>xchange-campbx</module>
 		<module>xchange-cavirtex</module>
+		<module>xchange-cexio</module>
+		<module>xchange-coinbase</module>
+		<module>xchange-coinfloor</module>
+		<module>xchange-cryptotrade</module>
 		<module>xchange-examples</module>
+		<module>xchange-justcoin</module>
 		<module>xchange-kraken</module>
 		<module>xchange-openexchangerates</module>
-		<module>xchange-mtgox</module>
-		<module>xchange-bitcoinaverage</module>
-		<module>xchange-bitfinex</module>
+		<module>xchange-vircurex</module>
+        <module>xchange-anx</module>
 	</modules>
 
 	<repositories>
@@ -123,19 +131,11 @@
 				<scope>test</scope>
 			</dependency>
 
-			<!-- All money handling is through Joda Money -->
-			<dependency>
-				<groupId>org.joda</groupId>
-				<artifactId>joda-money</artifactId>
-				<!-- Require 0.8+ to support Bitcoin (see #40) -->
-				<version>0.9</version>
-			</dependency>
-
 			<!-- Charting -->
 			<dependency>
 				<groupId>com.xeiam.xchart</groupId>
 				<artifactId>xchart</artifactId>
-				<version>2.3.0-SNAPSHOT</version>
+				<version>2.3.1</version>
 			</dependency>
 
 			<!-- Websocket library -->
@@ -149,7 +149,7 @@
 			<dependency>
 				<groupId>com.github.mmazi</groupId>
 				<artifactId>rescu</artifactId>
-				<version>1.5.0</version>
+				<version>1.6.0-SNAPSHOT</version>
 			</dependency>
 
 		</dependencies>
@@ -204,44 +204,6 @@
 				</plugins>
 			</build>
 		</profile>
-		<!-- use: mvn clean integration-test -P run-integration-tests -->
-		<!-- http://maven.apache.org/surefire/maven-surefire-plugin/test-mojo.html#groups -->
-		<profile>
-			<id>run-integration-tests</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven-surefire-plugin.version}</version>
-						<configuration>
-							<excludedGroups>none</excludedGroups>
-							<skip>false</skip>
-							<!-- <skipTests>false</skipTests> -->
-							<useFile>false</useFile>
-							<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-							<excludes>
-								<exclude>none</exclude>
-							</excludes>
-							<includes>
-								<include>**/*Test*.java</include>
-								<include>**/*Test.java</include>
-								<!-- <include>**/*TestCase.java</include> -->
-							</includes>
-						</configuration>
-						<executions>
-							<execution>
-								<id>integration-tests</id>
-								<phase>integration-test</phase>
-								<goals>
-									<goal>test</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 	</profiles>
 
 	<build>
@@ -258,6 +220,7 @@
 					<showWarnings>true</showWarnings>
 				</configuration>
 			</plugin>
+
 			<!-- Generates a source code JAR during package -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -272,6 +235,7 @@
 					</execution>
 				</executions>
 			</plugin>
+
 			<!-- Generates a Javadoc JAR during package -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -286,27 +250,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- Generate artifacts including dependencies -->
-			<!-- <plugin> -->
-			<!-- <groupId>org.apache.maven.plugins</groupId> -->
-			<!-- <artifactId>maven-shade-plugin</artifactId> -->
-			<!-- <version>2.1</version> -->
-			<!-- <executions> -->
-			<!-- <execution> -->
-			<!-- <phase>package</phase> -->
-			<!-- <goals> -->
-			<!-- <goal>shade</goal> -->
-			<!-- </goals> -->
-			<!-- <configuration> -->
-			<!-- <shadedArtifactAttached>true</shadedArtifactAttached> -->
-			<!-- <shadedClassifierName>with-dependencies</shadedClassifierName> -->
-			<!-- <transformers> -->
-			<!-- <transformer implementation="org.apache.maven.plugins.shade.resource.ComponentsXmlResourceTransformer" /> -->
-			<!-- </transformers> -->
-			<!-- </configuration> -->
-			<!-- </execution> -->
-			<!-- </executions> -->
-			<!-- </plugin> -->
+
 			<!-- for deploying to Maven Central -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -316,44 +260,8 @@
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 				</configuration>
 			</plugin>
-			<!-- normally don't run the test classes annotated with @OnlineTest -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>${maven-surefire-plugin.version}</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>${maven-surefire-plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>${maven-surefire-plugin.version}</version>
-					</dependency>
-				</dependencies>
-				<configuration>
-					<excludedGroups>com.xeiam.xchange.OnlineTest</excludedGroups>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			
+
+
 			<!-- for header in all .java files -->
 			<plugin>
 				<groupId>com.mycila.maven-license-plugin</groupId>
@@ -373,10 +281,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- Versioning -->
-		<maven-surefire-plugin.version>2.15</maven-surefire-plugin.version>
-
 	</properties>
 
 </project>
